modulo vista de informe2

--- a/app/dashboard/components/navbar/Navbar.module.css
+++ b/app/dashboard/components/navbar/Navbar.module.css
@@ -6,7 +6,9 @@
     flex-direction: column;
     border-right: rem(1px) solid
         light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+    background: linear-gradient(white, var(--color-wave-dark));
 }
+
 .navbarMain {
     flex: 1;
 }
