--- a/app/dashboard/components/navbar/Navbar.module.css
+++ b/app/dashboard/components/navbar/Navbar.module.css
@@ -27,7 +27,7 @@
     align-items: center;
     text-decoration: none;
     font-size: var(--mantine-font-size-sm);
-    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-1));
+    color: black;
     padding: var(--mantine-spacing-sm) var(--mantine-spacing-sm);
     border-radius: var(--mantine-radius-sm);
     font-weight: 500;
@@ -64,7 +64,6 @@
 }
 
 .linkIcon {
-    color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-2));
     margin-right: var(--mantine-spacing-sm);
     width: rem(25px);
     height: rem(25px);
