--- a/app/dashboard/pacientes/[id]/_components/Paciente/Paciente.module.css
+++ b/app/dashboard/pacientes/[id]/_components/Paciente/Paciente.module.css
@@ -1,18 +1,41 @@
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
 .title1 {
     font-size: 24px;
     font-weight: bold;
     color: #333;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    flex-basis: 100%;
+    text-align: center;
 }
 
 .title {
     font-size: 18px;
     font-weight: bold;
     color: #555;
-    margin-bottom: 5px;
+    margin: 15px;
 }
 
 .text {
     font-size: 16px;
     color: #777;
+}
+
+.observaciones {
+    padding: 0px 20px;
+}
+
+.image {
+    background-color: black;
+    border-radius: 20px;
+    padding: 10px;
+    width: '50%';
+    height: '50%';
 }
